package json changes

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "sukanya-account",
-  "homepage": "https://manishnagar.github.io/sukanya-calculator",
+  "homepage": "https://manishnagar.github.io/ssy-calculator",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
